--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"चालू है"</string>
     <string name="off" msgid="2898123876644709799">"बंद है"</string>
     <string name="device_info_default" msgid="1406619232867343310">"अनजान"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"जानकारी दिखाने के लिए टैप करें"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">अब आप डेवलपर बनने से <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> कदम दूर हैं.</item>
       <item quantity="other">अब आप डेवलपर बनने से <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> कदम दूर हैं.</item>
@@ -1444,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"यूएसबी, ब्लूटूथ, ईथरनेट"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"हॉटस्पॉट, यूएसबी, ब्लूटूथ, ईथरनेट"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"इंटरनेट को दूसरे डिवाइस से शेयर नहीं किया जा रहा है"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"बंद है"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"टेदरिंग"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"वाई-फ़ाई हॉटस्पॉट का इस्तेमाल न करें"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"सिर्फ़ यूएसबी के ज़रिए इंटरनेट शेयर करें"</string>
@@ -2414,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"शेड्यूल तय करें"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"बैटरी लाइफ़ बढ़ाएं"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"चार्ज होने पर बंद करें"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"जब फ़ोन की बैटरी <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> से ज़्यादा चार्ज हो जाती है, तब बैटरी सेवर बंद हो जाता है"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"टैबलेट की बैटरी को <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> से ज़्यादा चार्ज करने पर, बैटरी सेवर बंद हो जाता है"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"डिवाइस की बैटरी को <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> से ज़्यादा चार्ज करने पर, बैटरी सेवर बंद हो जाता है"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"चालू करें"</string>
@@ -4788,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (जिन ऐप्लिकेशन को छूट दी गई है)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (बिना यूज़र इंटरफ़ेस वाला सिस्टम ऐप)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (बाकी ऐप्लिकेशन)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (ऐप्लिकेशन की जानकारी देने वाले)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"बैटरी चार्ज हो रही है"</item>
     <item msgid="658627268149681677">"बैटरी बचाएं (डोज़)"</item>
