--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -2412,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"განრიგის დაწესება"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ზრდის ბატარეის მუშაობის ხანგრძლივობას"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"გამოირთოს, როდესაც დაიტენება"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"ბატარეის დამზოგი გამოირთვება, როდესაც თქვენი ტელეფონი <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-ზე მეტად დაიტენება"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"ბატარეის დამზოგი გამოირთვება, როდესაც თქვენი ტაბლეტი <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-ზე მეტად დაიტენება"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"ბატარეის დამზოგი გამოირთვება, როდესაც თქვენი მოწყობილობა <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-ზე მეტად დაიტენება"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ჩართვა"</string>
