--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Қосулы"</string>
     <string name="off" msgid="2898123876644709799">"Өшірулі"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Белгісіз"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Ақпарат көрсету үшін түртіңіз."</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Әзірлеуші болуға <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> қадам қалды.</item>
       <item quantity="one">Әзірлеуші болуға <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> қадам қалды.</item>
@@ -1444,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Хотспот USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Интернет басқа құрылғылармен бөлісіліп жатқан жоқ"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Өшірулі"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Тетеринг"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi хотспотын пайдаланбау"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Интернетті тек USB арқылы бөлісу"</string>
@@ -2414,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Кесте құру"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Батарея жұмысының ұзақтығын арттыру"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Толық зарядталғанда өшіру"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Телефон <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Планшет <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Құрылғы <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-дан аса зарядталғанда, Батареяны үнемдеу режимі өшеді."</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Қосу"</string>
@@ -4788,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Толық заряд жағдайындағы минималды баланс (босатылған қолданбалар)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Толық заряд жағдайындағы минималды баланс (консольсыз жүйе қолданбалары)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Толық заряд жағдайындағы минималды баланс (қалған қолданбалар)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Толық заряд жағдайындағы минималды балансты қосу (қолданбаны жаңартушылар)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Зарядталуда"</item>
     <item msgid="658627268149681677">"Қалғу режимі"</item>
