--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ಬ್ಲೂಟೂತ್, ಇಥರ್ನೆಟ್"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ಹಾಟ್‌ಸ್ಪಾಟ್, USB, ಬ್ಲೂಟೂತ್, ಇಥರ್ನೆಟ್"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ಇತರ ಸಾಧನಗಳ ಜೊತೆಗೆ ಇಂಟರ್ನೆಟ್ ಅನ್ನು ಹಂಚಿಕೊಳ್ಳುತ್ತಿಲ್ಲ"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"ಆಫ್ ಆಗಿದೆ"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"ಟೆಥರಿಂಗ್‌"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ವೈ-ಫೈ ಹಾಟ್‌ಸ್ಪಾಟ್ ಬಳಸಬೇಡಿ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB ಮೂಲಕ ಮಾತ್ರ ಇಂಟರ್ನೆಟ್ ಹಂಚಿಕೊಳ್ಳಿ"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ವೇಳಾಪಟ್ಟಿಯನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ಬ್ಯಾಟರಿ ಬಾಳಿಕೆ ವಿಸ್ತರಿಸಿ"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ಚಾರ್ಜ್‌ ಆದ ನಂತರ ಆಫ್ ಮಾಡಿ"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"ನಿಮ್ಮ ಫೋನ್ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> ಗಿಂತ ಹೆಚ್ಚು ಚಾರ್ಜ್ ಆದಾಗ, ಬ್ಯಾಟರಿ ಸೇವರ್‌ ಆಫ್ ಆಗುತ್ತದೆ"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> ಗಿಂತ ಹೆಚ್ಚು ಚಾರ್ಜ್ ಆದಾಗ, ಬ್ಯಾಟರಿ ಸೇವರ್‌ ಆಫ್ ಆಗುತ್ತದೆ"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"ನಿಮ್ಮ ಸಾಧನವು <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> ಗಿಂತ ಹೆಚ್ಚು ಚಾರ್ಜ್ ಆದಾಗ, ಬ್ಯಾಟರಿ ಸೇವರ್‌ ಆಫ್ ಆಗುತ್ತದೆ"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ಆನ್"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ವಿನಾಯಿತಿ ನೀಡಿರುವುದು)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ಹೆಡ್‌ಲೆಸ್ ಸಿಸ್ಟಂ ಆ್ಯಪ್)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ಉಳಿದಿರುವ ಆ್ಯಪ್‌ಗಳು)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ ಸೇರಿಸುವಿಕೆ (ಆ್ಯಪ್ ಅಪ್‌ಡೇಟರ್‌ಗಳು)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ಚಾರ್ಜಿಂಗ್ ಆಗುತ್ತಿದೆ"</item>
     <item msgid="658627268149681677">"ಡೋಸ್"</item>
