--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"사용"</string>
     <string name="off" msgid="2898123876644709799">"사용 안함"</string>
     <string name="device_info_default" msgid="1406619232867343310">"알 수 없음"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"탭하여 정보 표시"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g>단계만 더 완료하면 개발자가 될 수 있습니다.</item>
       <item quantity="one"><xliff:g id="STEP_COUNT_0">%1$d</xliff:g>단계만 더 완료하면 개발자가 될 수 있습니다.</item>
@@ -1450,8 +1449,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, 블루투스, 이더넷"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"핫스팟, USB, 블루투스, 이더넷"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"다른 기기와 인터넷 공유 안함"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"사용 안함"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"테더링"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi 핫스팟 사용 안함"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB를 통해서만 인터넷 공유"</string>
@@ -2420,9 +2418,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"절전 모드 예약"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"배터리 수명 연장"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"충전 완료 시 사용 중지"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"휴대전화가 <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> 이상 충전되면 절전 기능을 사용 중지합니다."</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"태블릿이 <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> 이상 충전되면 절전 기능을 사용 중지합니다."</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"기기가 <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> 이상 충전되면 절전 기능을 사용 중지합니다."</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"사용 설정"</string>
@@ -4794,8 +4795,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"완충 시 최소 잔량(예외)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"완충 시 최소 잔량(헤드리스 시스템 앱)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"완충 시 최소 잔량(나머지 앱)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"완충 시 최소 잔량 추가(앱 업데이터)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"충전 중"</item>
     <item msgid="658627268149681677">"잠자기"</item>
