--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Įjungta"</string>
     <string name="off" msgid="2898123876644709799">"Išjungta"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Nežinomas"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Palieskite norėdami rodyti informaciją"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Liko atlikti <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> veiksmą ir būsite kūrėjas.</item>
       <item quantity="few">Liko atlikti <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> veiksmus ir būsite kūrėjas.</item>
@@ -1486,8 +1485,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, „Bluetooth“, eternetas"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Viešosios interneto prieigos taškas, USB, „Bluetooth“, eternetas"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internetas nebendrinamas su kitais įrenginiais"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Išjungta"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Įrenginio kaip modemo naudojimas"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nenaudoti „Wi‑Fi“ viešosios interneto prieigos taško"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Bendrinti internetą tik naudojant USB"</string>
@@ -2488,9 +2486,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Nustatyti tvarkaraštį"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Pailginti akumuliatoriaus veikimo laiką"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Išjungti įkrovus"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Akumuliatoriaus tausojimo priemonė išjungiama, kai telefono įkrovimo lygis viršija <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Akumuliatoriaus tausojimo priemonė išjungiama, kai planšetinio kompiuterio įkrovimo lygis viršija <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Akumuliatoriaus tausojimo priemonė išjungiama, kai įrenginio įkrovimo lygis viršija <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Įjungti"</string>
@@ -4924,8 +4925,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Mažiausias visiško įkrovimo balansas (pritaikyta išimtis)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Mažiausias visiško įkrovimo balansas (sist. programa be grafinės naud. sąsajos)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Mažiausias visiško įkrovimo balansas (likusios programos)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Mažiausio visiško įkrovimo balans pridėjimas (programų atnaujinimo priemonės)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Įkrovimas"</item>
     <item msgid="658627268149681677">"Snustelėjimas"</item>
