--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1447,8 +1447,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, етернет"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Точка на пристап, USB, Bluetooth, етернет"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Не се споделува интернет со други уреди"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Исклучено"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Врзување"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Не користете точка на пристап за Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Споделувајте интернет само преку USB"</string>
@@ -2417,9 +2416,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Поставете распоред"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Продолжете го траењето на батеријата"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Исклучи кога ќе се наполни"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"„Штедачот на батерија“ ќе се исклучи кога телефонот е наполнет над <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"„Штедачот на батерија“ ќе се исклучи кога таблетот е наполнет над <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"„Штедачот на батерија“ ќе се исклучи кога уредот е наполнет над <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Вклучи"</string>
@@ -4791,8 +4793,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Минимално салдо при полна батерија (изземени апликации)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Минимално салдо при полна батерија (апликации без кориснички интерфејс)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Минимално салдо при полна батерија (останати апликации)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Минимално салдо при полна батерија (ажурирачи на апликации)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Се полни"</item>
     <item msgid="658627268149681677">"Дремка"</item>
