--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ବ୍ଲୁଟୁଥ୍, ଇଥରନେଟ୍"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ହଟସ୍ପଟ୍, USB, ବ୍ଲୁଟୁଥ୍, ଇଥରନେଟ୍"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ଅନ୍ୟ ଡିଭାଇସଗୁଡ଼ିକ ସହ ଇଣ୍ଟର୍ନେଟ୍ ସେୟାର୍ କରୁନାହିଁ"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"ବନ୍ଦ ଅଛି"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"ଟିଥରିଂ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ୱାଇ‑ଫାଇ ହଟସ୍ପଟ୍ ବ୍ୟବହାର କରନ୍ତୁ ନାହିଁ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"କେବଳ USB ମାଧ୍ୟମରେ ଇଣ୍ଟର୍ନେଟ୍ ସେୟାର୍ କରନ୍ତୁ"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ଗୋଟିଏ ସିଡୁଲ୍ ସେଟ୍‌ କରନ୍ତୁ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ବ୍ୟାଟେରୀର ଜୀବନକାଳ ବଢ଼ାନ୍ତୁ"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ଚାର୍ଜ ହୋଇଗଲେ ବନ୍ଦ କରନ୍ତୁ"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"ଆପଣଙ୍କ ଫୋନର ଚାର୍ଜ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>ରୁ ଅଧିକ ହେଲେ ବ୍ୟାଟେରୀ ସେଭର୍ ବନ୍ଦ ହୁଏ"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"ଆପଣଙ୍କ ଟାବଲେଟର ଚାର୍ଜ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>ରୁ ଅଧିକ ହେଲେ ବ୍ୟାଟେରୀ ସେଭର୍ ବନ୍ଦ ହୁଏ"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"ଆପଣଙ୍କ ଡିଭାଇସର ଚାର୍ଜ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>ରୁ ଅଧିକ ହେଲେ ବ୍ୟାଟେରୀ ସେଭର୍ ବନ୍ଦ ହୁଏ"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ଚାଲୁ କରନ୍ତୁ"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବାଧିକ ବାଲାନ୍ସ (ବାଦ୍ ଦିଆଯାଇଛି)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବନିମ୍ନ ବାଲାନ୍ସ (Headless System ଆପ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବନିମ୍ନ ବାଲାନ୍ସ (ଅବଶିଷ୍ଟ ଆପ୍ସ)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ସର୍ବନିମ୍ନ ସାଟିଏଟେଡ ବାଲାନ୍ସ ଯୋଗ (ଆପ ଅପଡେଟରଗୁଡ଼ିକ)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ଚାର୍ଜ ହେଉଛି"</item>
     <item msgid="658627268149681677">"ଡଜ୍"</item>
