--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -823,7 +823,7 @@
     <string name="show_refresh_rate" msgid="5742688821872354973">"Mostrar taxa de atualização"</string>
     <string name="show_refresh_rate_summary" msgid="3558118122374609663">"Mostrar taxa de atualização de apresentação atual"</string>
     <string name="nfc_quick_toggle_title" msgid="3607620705230351666">"NFC"</string>
-    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"Solicitar o desbloqueio do dispositivo para o NFC"</string>
+    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"Pedir o desbloqueio do dispositivo para o NFC"</string>
     <string name="nfc_secure_toggle_summary" product="default" msgid="407654335737959071">"Permita a utilização do NFC apenas quando o ecrã está desbloqueado"</string>
     <string name="android_beam_settings_title" msgid="2797963824490671295">"Android Beam"</string>
     <string name="android_beam_on_summary" msgid="6067720758437490896">"Pronto para transmitir conteúdo da aplicação via NFC"</string>
@@ -2412,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Definir um horário"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Prolongue a autonomia da bateria"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Desativar após o carregamento"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"A Poupança de bateria é desativada quando o telemóvel estiver com mais de <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"A Poupança de bateria é desativada quando o tablet estiver com mais de <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"A Poupança de bateria é desativada quando o dispositivo estiver com mais de <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Ativar"</string>
@@ -2763,7 +2766,7 @@
     <string name="vpn_lockdown_summary" msgid="4700625960550559029">"Selecione um perfil de VPN para permanecer sempre ligado. O tráfego de rede só será permitido quando ligado a esta VPN."</string>
     <string name="vpn_lockdown_none" msgid="455915403560910517">"Nenhuma"</string>
     <string name="vpn_lockdown_config_error" msgid="1992071316416371316">"A VPN sempre ativa requer um endereço IP de servidor e DNS."</string>
-    <string name="vpn_no_network" msgid="7187593680049843763">"Não existe ligação à rede. Tente novamente mais tarde."</string>
+    <string name="vpn_no_network" msgid="7187593680049843763">"Não existe ligação à rede. Tente mais tarde."</string>
     <string name="vpn_disconnected" msgid="7694522069957717501">"Desligado da VPN"</string>
     <string name="vpn_disconnected_summary" msgid="721699709491697712">"Nenhuma"</string>
     <string name="vpn_missing_cert" msgid="5397309964971068272">"Falta um certificado. Experimente editar o perfil."</string>
