--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Vklopljeno"</string>
     <string name="off" msgid="2898123876644709799">"Izklopljeno"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Neznano"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Dotaknite se za prikaz podatkov"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g> korak vas loči od tega, da postanete razvijalec.</item>
       <item quantity="two"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g> koraka vas ločita od tega, da postanete razvijalec.</item>
@@ -1492,8 +1491,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Dostopna točka, USB, Bluetooth, ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internetna povezava ni deljena z drugimi napravami"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Izklopljeno"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Internetna povezava prek mobilnega telefona"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Brez uporabe dostopne točke Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Deljenje internetne povezave samo prek USB-ja"</string>
@@ -2494,9 +2492,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Nastavitev razporeda"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Podaljšanje časa delovanja baterije"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Izklop ob napolnjenosti"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Varčevanje z energijo baterije se izklopi, ko je telefon napolnjen več kot <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>."</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Varčevanje z energijo baterije se izklopi, ko je tablični računalnik napolnjen več kot <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>."</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Varčevanje z energijo baterije se izklopi, ko je naprava napolnjena več kot <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>."</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Vklop"</string>
@@ -4930,8 +4931,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Najnižje stanje ob polni napolnjenosti (izvzete aplikacije)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Najnižje stanje ob polni napolnjenosti (sistemska aplikacija brez vmesnika)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Najnižje stanje ob polni napolnjenosti (preostale aplikacije)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Dodatek pri najnižjem stanju ob polni napolnjenosti (orodja za posod. aplikacij)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Polnjenje"</item>
     <item msgid="658627268149681677">"Dremanje"</item>
