--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB บลูทูธ อีเทอร์เน็ต"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ฮอตสปอต USB บลูทูธ อีเทอร์เน็ต"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ไม่ได้แชร์อินเทอร์เน็ตกับอุปกรณ์อื่น"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"ปิด"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"การเชื่อมต่ออินเทอร์เน็ตผ่านมือถือ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ไม่ใช้ฮอตสปอต Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"แชร์อินเทอร์เน็ตผ่าน USB เท่านั้น"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ตั้งกำหนดการ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ยืดอายุใช้งานแบตเตอรี่"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ปิดเมื่อชาร์จแล้ว"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"โหมดประหยัดแบตเตอรี่จะปิดเมื่อโทรศัพท์ชาร์จเกิน <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"โหมดประหยัดแบตเตอรี่จะปิดเมื่อแท็บเล็ตชาร์จเกิน <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"โหมดประหยัดแบตเตอรี่จะปิดเมื่ออุปกรณ์ชาร์จเกิน <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"เปิด"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ยอดคงเหลือขั้นต่ำเมื่อชาร์จเต็ม (ได้รับการยกเว้น)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ยอดคงเหลือขั้นต่ำเมื่อชาร์จเต็ม (แอประบบแบบไม่มีส่วนหัว)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ยอดคงเหลือขั้นต่ำเมื่อชาร์จเต็ม (แอปที่เหลือ)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"การเพิ่มยอดคงเหลือขั้นต่ำเมื่อชาร์จเต็ม (โปรแกรมอัปเดตแอป)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"การชาร์จ"</item>
     <item msgid="658627268149681677">"Doze"</item>
