--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Hindi nagbabahagi ng internet sa ibang device"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Naka-off"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Pag-tether"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Huwag gumamit ng Wi‑Fi hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Magbahagi ng internet sa pamamagitan lang ng USB"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Magtakda ng iskedyul"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Patagalin ang baterya"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"I-off kapag naka-charge"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> na ang charge ng iyong telepono"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> na ang charge ng iyong tablet"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Mag-o-off ang Pantipid ng Baterya kapag lampas <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> na ang charge ng iyong device"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"I-on"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimum na Balanse Kapag Ganap na Na-charge (Hindi Kasama)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimum na Balanse Kapag Ganap na Na-charge (Headless System App)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimum na Balanse Kapag Ganap na Na-charge (Mga Natitirang App)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimum na Dagdag sa Balanse Kapag Ganap na Na-charge (Mga Updater ng App)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Pag-charge"</item>
     <item msgid="658627268149681677">"Pag-doze"</item>
