--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"已開啟"</string>
     <string name="off" msgid="2898123876644709799">"已關閉"</string>
     <string name="device_info_default" msgid="1406619232867343310">"未知"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"輕按即可顯示資料"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">尚餘 <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> 個步驟，您就可以成為開發人員。</item>
       <item quantity="one">尚餘 <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> 個步驟，您就可以成為開發人員。</item>
@@ -1446,8 +1445,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB、藍牙、以太網"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"熱點、USB、藍牙、以太網"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"目前沒有與其他裝置共用互聯網"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"關閉"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"網絡共享"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"不使用 Wi‑Fi 熱點"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"僅透過 USB 分享互聯網"</string>
@@ -2416,9 +2414,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"設定時間表"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"延長電池壽命"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"充夠電時關閉"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"當裝置電量達 <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g> 時關閉「省電模式」"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"當平板電腦電量達 <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g> 時關閉「省電模式」"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"當裝置電量達 <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g> 時關閉「省電模式」"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"開啟"</string>
@@ -4790,8 +4791,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"裝置充滿電時的最低可用電量 (例外應用程式)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"裝置充滿電時的最低可用電量 (無使用者介面的系統應用程式)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"裝置充滿電時的最低可用電量 (其他應用程式)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"充滿電時的最低額外餘額 (應用程式更新工具)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"充電"</item>
     <item msgid="658627268149681677">"休息模式"</item>
