--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -1444,8 +1444,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"I-USB, i-Bluetooth, i-Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"I-Hotspot, i-USB, i-Bluetooth, i-Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Ayabelani nge-inthanethi namanye amadivayisi"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Valiwe"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Ukusebenzisa ifoni njengemodemu"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Ungasebenzisi i-Wi‑Fi hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Yabelana i-inthanethi nge-USB"</string>
@@ -2414,9 +2413,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Setha ishejuli"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Khulisa impilo yebhethri"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Vala lapho ishajiwe"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Isilondolozi sebhethri sivala lapho ifoni yakho ishaja ngaphezu kuka-<xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Isilondolozi sebhethri sivala lapho ithebulethi yakho ishaja ngaphezu kuka-<xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Isilondolozi sebhethri sivala lapho idivayisi yakho ishaja ngaphezu kuka-<xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Vula"</string>
@@ -4788,8 +4790,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Ibhalansi Enelisekile (Ikhululiwe)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Ibhalansi Enelisekile (I-App Yesistimu Engenazinhloko)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Ibhalansi Enelisekile (Ama-app Asele)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Ukwengezwa Kwebhalansi Egcwalisiwe Encane (Izibuyekezi ze-App)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Iyashaja"</item>
     <item msgid="658627268149681677">"Ukozela"</item>
