--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -2449,9 +2449,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Podesite raspored"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Produžite trajanje baterije"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Isključi kada se napuni"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Ušteda baterije se isključuje kada je telefon napunjen više od <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Ušteda energije se isključuje kada je tablet napunjen više od <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Ušteda energije se isključuje kada je uređaj napunjen više od <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Uključi"</string>
