--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Уключана"</string>
     <string name="off" msgid="2898123876644709799">"Выключана"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Невядома"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Націсніце для паказу інфармацыі"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Зараз вы ў <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> кроку ад таго, каб стаць распрацоўшчыкам.</item>
       <item quantity="few">Зараз вы ў <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> кроках ад таго, каб стаць распрацоўшчыкам.</item>
@@ -1488,8 +1487,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Хот-спот, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Інтэрнэт не абагульваецца з іншымі прыладамі"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Выключана"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Мадэм"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Не выкарыстоўваць хот-спот Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Абагульваць інтэрнэт толькі праз USB"</string>
@@ -2490,9 +2488,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Задаць расклад"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Павялічыць тэрмін службы акумулятара"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Выключаць, калі прылада зарадзіцца"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Рэжым эканоміі зараду выключаецца, калі зарад тэлефона перавышае <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Рэжым эканоміі зараду выключаецца, калі зарад планшэта перавышае <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Рэжым эканоміі зараду выключаецца, калі зарад прылады перавышае <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Уключыць"</string>
@@ -4926,8 +4927,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Мінімальны баланс пры поўнай зарадцы (для выключаных праграм)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Мінімальны баланс пры поўнай зарадцы (для сістэмных праграм без інтэрфейсу)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Мінімальны баланс пры поўнай зарадцы (для астатніх праграм)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Дадаванне \"Мінімальны баланс пры поўнай зарадцы\" (сродкі абнаўлення праграм)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Зарадка"</item>
     <item msgid="658627268149681677">"Дрымота"</item>
