--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"ইউএসবি, ব্লুটুথ, ইথারনেট"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"হটস্পট, ইউএসবি, ব্লুটুথ, ইথারনেট"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"অন্যান্য ডিভাইসের সাথে ইন্টারনেট শেয়ার করা হচ্ছে না"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"বন্ধ রয়েছে"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"টিথারিং"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ওয়াই-ফাই হটস্পট ব্যবহার করবেন না"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"শুধুমাত্র ইউএসবির মাধ্যমে ইন্টারনেট শেয়ার করুন"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"সময়সূচি সেট করুন"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ব্যাটারি আরও বেশি সময় চলবে"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"চার্জ হয়ে গেলে বন্ধ করুন"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"আপনার ফোনের চার্জ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-এর বেশি হলে ব্যাটারি সেভার বন্ধ হয়ে যাবে"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"আপনার ট্যাবলেটের চার্জ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-এর বেশি হলে ব্যাটারি সেভার বন্ধ হয়ে যাবে"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"আপনার ডিভাইসের চার্জ <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-এর বেশি হলে ব্যাটারি সেভার বন্ধ হয়ে যাবে"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"চালু করুন"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (ছাড় দেওয়া হয়েছে)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (হেডলেস সিস্টেম অ্যাপ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (বাকি অ্যাপ)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ন্যূনতম সেশিয়েটেড ব্যালেন্স যোগ করা (অ্যাপ আপডেটার)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"চার্জ হচ্ছে"</item>
     <item msgid="658627268149681677">"ব্যাটারি \'ডজ\' অবস্থায় আছে"</item>
