--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Activat"</string>
     <string name="off" msgid="2898123876644709799">"Desactivat"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Desconegut"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Toca per mostrar informació"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Ara només et queden <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> passos per convertir-te en desenvolupador.</item>
       <item quantity="one">Ara només et queda <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> pas per convertir-te en desenvolupador.</item>
@@ -1444,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth i Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Punt d\'accés Wi‑Fi, USB, Bluetooth i Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"No s\'està compartint la connexió a Internet amb altres dispositius"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Desactivat"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Compartició de xarxa"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"No utilitzis el punt d\'accés Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Comparteix Internet només per USB"</string>
@@ -2414,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Defineix una programació"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Allarga la durada de la bateria"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Desactiva quan estigui carregada"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Estalvi de bateria es desactiva quan el telèfon té més d\'un <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Estalvi de bateria es desactiva quan la tauleta té més d\'un <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Estalvi de bateria es desactiva quan el dispositiu té més d\'un <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> de bateria"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Activa"</string>
@@ -4788,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Saldo mínim amb càrrega completa (aplicacions exemptes)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Saldo mínim amb càrrega completa (apps del sistema sense interfície gràfica)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Saldo mínim amb càrrega completa (resta d\'aplicacions)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Addició de saldo mínim amb càrrega completa (actualitzadors d\'aplicació)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Càrrega"</item>
     <item msgid="658627268149681677">"Migdiada"</item>
