--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Zapnuto"</string>
     <string name="off" msgid="2898123876644709799">"Vypnuto"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Neznámé"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Klepnutím zobrazíte informace"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="few">Ještě <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> kroky a bude z vás vývojář.</item>
       <item quantity="many">Ještě <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> kroku a bude z vás vývojář.</item>
@@ -1486,8 +1485,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internet není sdílen s dalšími zařízeními"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Vypnuto"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tethering"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nepoužívat Wi‑Fi hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Sdílet internet pouze přes USB"</string>
@@ -2488,9 +2486,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Nastavení plánu"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Prodloužení výdrže baterie"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Vypnout při nabití"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Spořič baterie se vypne, až se telefon nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Spořič baterie se vypne, až se tablet nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Spořič baterie se vypne, až se zařízení nabije nad <xliff:g id="NUMBER">^1</xliff:g> <xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Zapnout"</string>
@@ -4924,8 +4925,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimální zůstatek při úplném nabití (aplikace s výjimkou)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimální zůstatek při úplném nabití (neinteraktivní systémová aplikace)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimální zůstatek při úplném nabití (zbývající aplikace)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimální zůstatek při úplném nabití (aktualizace aplikací)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Nabíjení"</item>
     <item msgid="658627268149681677">"Zdřímnutí"</item>
