--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"הפעלה"</string>
     <string name="off" msgid="2898123876644709799">"השבתה"</string>
     <string name="device_info_default" msgid="1406619232867343310">"לא ידוע"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"אפשר להקיש כדי להציג מידע נוסף"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="two">נותרו לך עוד  <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> שלבים כדי להיות מפתח.</item>
       <item quantity="many">נותרו לך עוד <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> שלבים כדי להיות מפתח.</item>
@@ -2491,9 +2490,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"הגדרת לוח זמנים"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"הארכת חיי הסוללה"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"כיבוי כשהסוללה טעונה"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"‏מצב \'חיסכון בסוללה\' ייכבה כשטעינת הטלפון גבוהה מ-<xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>‎"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"התכונה \'חיסכון בסוללה\' נכבית כשטעינת הטאבלט גבוהה מ-<xliff:g id="UNIT">%</xliff:g><xliff:g id="NUMBER">^1</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"התכונה \'חיסכון בסוללה\' נכבית כשטעינת המכשיר גבוהה מ-<xliff:g id="UNIT">%</xliff:g><xliff:g id="NUMBER">^1</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"הפעלה"</string>
