--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"បើក"</string>
     <string name="off" msgid="2898123876644709799">"បិទ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"មិន​ស្គាល់"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"ប៉ះដើម្បីបង្ហាញព័ត៌មាន"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">ឥឡូវនេះអ្នកនៅសល់ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ជំហានទៀតដើម្បីក្លាយជាអ្នកអភិវឌ្ឍន៍។</item>
       <item quantity="one">ឥឡូវនេះអ្នកនៅសល់ <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> ជំហានទៀតដើម្បីក្លាយជាអ្នកអភិវឌ្ឍន៍។</item>
@@ -1444,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ប៊្លូធូស, អ៊ីសឺរណិត"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ហតស្ប៉ត, USB, ប៊្លូធូស, អ៊ីសឺរណិត"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"មិនកំពុង​ចែករំលែក​អ៊ីនធឺណិត​ជាមួយ​ឧបករណ៍​ផ្សេងទៀត​នោះទេ"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"បិទ"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"ការ​ភ្ជាប់"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"កុំប្រើ​ហតស្ប៉ត Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"ចែករំលែក​អ៊ីនធឺណិត​តាមរយៈ USB តែប៉ុណ្ណោះ"</string>
@@ -2414,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"កំណត់​កាលវិភាគ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"បង្កើនកម្រិត​ថាមពល​ថ្ម"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"បិទ នៅពេល​សាកថ្មពេញ"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"មុខងារសន្សំថ្មនឹងបិទ នៅពេល​ទូរសព្ទរបស់អ្នក​សាកថ្មលើសពី <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"មុខងារសន្សំថ្មនឹងបិទ នៅពេល​ថេប្លេតរបស់អ្នក​សាកថ្មលើសពី <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"មុខងារសន្សំថ្មនឹងបិទ នៅពេល​ឧបករណ៍របស់អ្នក​សាកថ្មលើសពី <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"បើក"</string>
@@ -4788,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ដែលបាន​លើកលែង)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ប្រព័ន្ធដែល​គ្មានផ្ទៃប៉ះ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ដែលនៅសល់)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ការបន្ថែមសមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធីដំឡើងកំណែកម្មវិធី)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"កំពុងសាកថ្ម"</item>
     <item msgid="658627268149681677">"ដូស"</item>
