--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Ieslēgts"</string>
     <string name="off" msgid="2898123876644709799">"Izslēgts"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Nezināms"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Lai rādītu informāciju, pieskarieties"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="zero">Lai jūs kļūtu par izstrādātāju, atlikušas <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> darbības.</item>
       <item quantity="one">Lai jūs kļūtu par izstrādātāju, atlikusi <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> darbība.</item>
@@ -1465,8 +1464,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Tīklājs, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internets netiek koplietots ar citām ierīcēm"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Izslēgts"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Piesaiste"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Neizmantot Wi‑Fi tīklāju"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Kopīgot interneta savienojumu, tikai izmantojot USB"</string>
@@ -2451,9 +2449,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Iestatīt grafiku"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Akumulatora darbības laika paildzināšana"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Izslēgt, kad uzlādējies"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Akumulatora enerģijas taupīšanas režīms tiek izslēgts, kad tālruņa uzlādes līmenis pārsniedz <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Akumulatora enerģijas taupīšanas režīms tiek izslēgts, kad planšetdatora uzlādes līmenis pārsniedz <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Akumulatora enerģijas taupīšanas režīms tiek izslēgts, kad ierīces uzlādes līmenis pārsniedz <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Ieslēgt"</string>
@@ -4856,8 +4857,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimālais atlikums ar uzlādētu ierīci (izslēgtas lietotnes)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimālais atlikums ar uzlādētu ierīci (bezgalvas sistēmas lietotne)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimālais atlikums ar uzlādētu ierīci (atlikušās lietotnes)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimālā atlikuma ar uzlādētu ierīci papildināšana (lietotņu atjauninātāji)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Uzlāde"</item>
     <item msgid="658627268149681677">"Snauda"</item>
