--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, ഇതർനെറ്റ്"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ഹോട്ട്‌സ്‌പോട്ട്, USB, Bluetooth, ഇതർനെറ്റ്"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"മറ്റ് ഉപകരണങ്ങളുമായി ഇന്‍റർനെറ്റ് പങ്കിടുന്നില്ല"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"ഓഫാണ്"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"ടെതറിംഗ്"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"വൈഫൈ ഹോട്ട്‌സ്‌പോട്ട് ഉപയോഗിക്കരുത്"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB വഴി മാത്രം ഇന്റർനെറ്റ് പങ്കിടുക"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"ഷെഡ്യൂള്‍‌ സജ്ജീകരിക്കുക"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ബാറ്ററി ലൈഫ് നീട്ടുക"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"ചാർജായാൽ ഓഫാക്കുക"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"നിങ്ങളുടെ ഫോണിന്റെ ചാർജ് <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> എന്നതിന് മുകളിലാകുമ്പോൾ ബാറ്ററി ലാഭിക്കൽ ഓഫാകും"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"നിങ്ങളുടെ ടാബ്‌ലെറ്റിന്റെ ചാർജ് <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> എന്നതിന് മുകളിലാകുമ്പോൾ ബാറ്ററി ലാഭിക്കൽ ഓഫാകും"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"നിങ്ങളുടെ ഉപകരണത്തിന്റെ ചാർജ് <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> എന്നതിന് മുകളിലാകുമ്പോൾ ബാറ്ററി ലാഭിക്കൽ ഓഫാകും"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ഓണാക്കുക"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ഉപകരണം ചാർജായാലുള്ള കുറഞ്ഞ ബാലൻസ് (ഒഴിവാക്കിയത്)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ഉപകരണം ചാർജായാലുള്ള കുറഞ്ഞ ബാലൻസ് (ഹെഡ്‌ലെസ് സിസ്‌റ്റം ആപ്പ്)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ഉപകരണം ചാർജായാലുള്ള കുറഞ്ഞ ബാലൻസ് (ശേഷിക്കുന്ന ആപ്പുകൾ)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"ഉപകരണം ചാർജായാലുള്ള കുറഞ്ഞ ബാലൻസ് കൂട്ടിച്ചേർക്കൽ (ആപ്പ് അപ്‌ഡേറ്റേഴ്‌സ്)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ചാർജ് ചെയ്യുന്നു"</item>
     <item msgid="658627268149681677">"ഡോസ്"</item>
