--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Сүлжээний цэг, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Бусад төхөөрөмжтэй интернэт хуваалцахгүй"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Унтраах"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Модем болгох"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi-Fi сүлжээний цэгийг бүү ашигла"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Интернэтийг зөвхөн USB-р хуваалцана"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Хуваарь тохируулах"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Батарейн ажиллах хугацааг сунгах"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Цэнэглэсэн үед унтраах"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Таны утсыг <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-с дээш цэнэглэхэд Батарей хэмнэгч унтарна"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Таны таблетыг <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-с дээш цэнэглэхэд Батарей хэмнэгч унтарна"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Таны төхөөрөмжийг <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>-с дээш цэнэглэхэд Батарей хэмнэгч унтарна"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Асаах"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Бүрэн цэнэглэгдсэн үеийн доод үлдэгдэл (Чөлөөлсөн)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Бүрэн цэнэглэгдсэн үеийн доод үлдэгдэл (Хэрэглэгчийн интерфэйсгүй системийн апп)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Бүрэн цэнэглэгдсэн үеийн доод үлдэгдэл (Үлдсэн аппууд)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Бүрэн цэнэглэгдсэн үлдэгдлийн хамгийн бага нэмэгдэл (Апп шинэчлэгч)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Цэнэглэж байна"</item>
     <item msgid="658627268149681677">"Зүүрмэглэх"</item>
