--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -1443,8 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB၊ ဘလူးတုသ်၊ အီတာနက်"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ဟော့စပေါ့၊ USB၊ ဘလူးတုသ်၊ အီတာနက်"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"အခြားစက်ပစ္စည်းများနှင့် အင်တာနက် မျှဝေထားခြင်းမရှိပါ"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"ပိတ်"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"မိုဘိုင်းသုံးတွဲချိတ်ခြင်း"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi ဟော့စပေါ့ မသုံးပါနှင့်"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"အင်တာနက်ကို USB မှတစ်ဆင့်သာ မျှဝေရန်"</string>
@@ -2413,9 +2412,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"အချိန်ဇယား သတ်မှတ်ပါ"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"ဘက်ထရီသက်တမ်းကို တိုးပေးသည်"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"အားသွင်းနေသည့်အခါ ပိတ်ရန်"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"သင့်ဖုန်းကို <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> အထက် အားသွင်းပြီးသည့်အခါ ‘ဘက်ထရီ အားထိန်း’ ပိတ်ပါမည်"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"သင့်တက်ဘလက်ကို <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> အထက် အားသွင်းပြီးသည့်အခါ ‘ဘက်ထရီ အားထိန်း’ ပိတ်ပါမည်"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"သင့်စက်ကို <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> အထက် အားသွင်းပြီးသည့်အခါ ‘ဘက်ထရီ အားထိန်း’ ပိတ်ပါမည်"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"ဖွင့်ရန်"</string>
@@ -4787,8 +4789,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"အားပြည့်နေစဉ် အနည်းဆုံးလက်ကျန်ငွေ (ကင်းလွတ်ခွင့်ရသည်များ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"အားပြည့်နေစဉ် အနည်းဆုံးလက်ကျန်ငွေ (ခေါင်းစီးမပါသော စနစ်အက်ပ်)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"အားပြည့်နေစဉ် အနည်းဆုံးလက်ကျန်ငွေ (ကျန်ရှိသည့်အက်ပ်များ)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"အားပြည့်စဉ် အနည်းဆုံးခရက်ဒစ်လက်ကျန် ထပ်ဆောင်းဖြည့်ခြင်း (အက်ပ် အပ်ဒိတ်စနစ်များ)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"အားသွင်းနေသည်"</item>
     <item msgid="658627268149681677">"မှေးထားခြင်း"</item>
