--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -1470,8 +1470,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Nu se permite altor dispozitive accesul la conexiunea de internet"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Dezactivat"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tethering"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nu se folosesc hotspoturi Wi-Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Permite accesul la internet doar prin USB"</string>
@@ -2456,9 +2455,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Setează un program"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Prelungește autonomia bateriei"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Dezactivează când este încărcat complet"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Economisirea bateriei se dezactivează când telefonul se încarcă peste <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Economisirea bateriei se dezactivează când tableta se încarcă peste <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Economisirea bateriei se dezactivează când dispozitivul se încarcă peste <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Activează"</string>
@@ -4861,8 +4863,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Echilibru minim la încărcarea completă (scutit)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Echilibru minim la încărcarea completă (aplicație fără interfață grafică)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Echilibru minim la încărcarea completă (aplicațiile rămase)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Echilibru minim la încărcarea completă (actualizări de aplicație)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Încărcarea"</item>
     <item msgid="658627268149681677">"Doze"</item>
