--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Увімкнено"</string>
     <string name="off" msgid="2898123876644709799">"Вимкнено"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Невідомо"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Натисніть, щоб показати інформацію"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Залишився ще <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> крок, щоб стати розробником.</item>
       <item quantity="few">Залишилося ще <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> кроки, щоб стати розробником.</item>
@@ -1490,8 +1489,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Точка доступу, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Інші пристрої не мають доступу до Інтернету"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Вимкнено"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Використання телефона як модема"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Не використовувати точку доступу Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Надавати доступ до Інтернету тільки через USB"</string>
@@ -2492,9 +2490,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Налаштувати розклад"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Подовжте час роботи акумулятора"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Вимикати, коли заряджено"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Режим енергозбереження вимкнеться, коли рівень заряду телефона перевищить <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Режим енергозбереження вимкнеться, коли рівень заряду планшета перевищить <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Режим енергозбереження вимкнеться, коли рівень заряду пристрою перевищить <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Увімкнути"</string>
@@ -4928,8 +4929,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Мінімальний баланс, коли пристрій заряджено (виключені додатки)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Мінімальний баланс, коли пристрій заряджено (системнs headless-додатки)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Мінімальний баланс, коли пристрій заряджено (інші додатки)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Доповнення до мін. балансу, коли пристрій заряджено (засоби оновлення додатків)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Заряджання"</item>
     <item msgid="658627268149681677">"Режиму сну"</item>
