--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -25,8 +25,7 @@
     <string name="on" msgid="1702751473920047">"Yoniq"</string>
     <string name="off" msgid="2898123876644709799">"Oʻchiq"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Noma’lum"</string>
-    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
-    <skip />
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Axborot chiqarish uchun bosing"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Deyarli tugadi, <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ta qadam qoldi.</item>
       <item quantity="one">Deyarli tugadi, <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> ta qadam qoldi.</item>
@@ -1450,8 +1449,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internet boshqa qurilmalarga ulashilmaydi"</string>
-    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
-    <skip />
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Oʻchiq"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Modem rejimi"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi hotspot ishlatilmasin"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Internetni faqat USB orqali ulashish"</string>
@@ -2420,9 +2418,12 @@
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Jadval tuzish"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Batareya quvvati sarfini uzaytirish"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"Quvvatlanayotganda faolsizlantirish"</string>
-    <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"Telefon quvvati <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> dan oshganda, Quvvat tejash rejimi faolsizlantiriladi"</string>
-    <string name="battery_saver_sticky_description_new" product="tablet" msgid="4566426833434375284">"Planshet quvvati <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> dan oshganda, Quvvat tejash rejimi faolsizlantiriladi"</string>
-    <string name="battery_saver_sticky_description_new" product="device" msgid="4128841327359445726">"Qurilma quvvati <xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g> dan oshganda, Quvvat tejash rejimi faolsizlantiriladi"</string>
+    <!-- no translation found for battery_saver_sticky_description_new (3618041244703216293) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (1733686775743601110) -->
+    <skip />
+    <!-- no translation found for battery_saver_sticky_description_new (7449283917787428755) -->
+    <skip />
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Yoqish"</string>
@@ -4794,8 +4795,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimal toʻliq quvvat balansi (olib tashlangan)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimal toʻliq quvvat balansi (qarovsiz tizim ilovasi)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimal toʻliq quvvat balansi (qolgan ilovalar)"</string>
-    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
-    <skip />
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimal toʻliq quvvat balansiga qoʻshimcha (Ilova yangilash vostialari)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Quvvatlanmoqda"</item>
     <item msgid="658627268149681677">"Mudroq"</item>
